# routes/messages.js
@@ -1,22 +1,24 @@
 const express = require("express");
 const router = express.Router();
 
+const { isAuthenticated } = require("../middleware/auth");
+
 const {
   getAllMessages,
   getSingleMessage,
   createMessage,
   updateMessage,
-  deleteMessage
+  deleteMessage,
 } = require("../controllers/messages");
 
 router.get("/", getAllMessages);
 
 router.get("/:id", getSingleMessage);
 
-router.post("/", createMessage);
+router.post("/", isAuthenticated, createMessage);
 
-router.put("/:id", updateMessage);
+router.put("/:id", isAuthenticated, updateMessage);
 
-router.delete("/:id", deleteMessage);
+router.delete("/:id", isAuthenticated, deleteMessage);
 
 module.exports = router;
